--- a/spiderweb/app/views/splashdown/links.html
+++ b/spiderweb/app/views/splashdown/links.html
@@ -155,7 +155,7 @@
 
 <!-- LINK TEXT COMPARISON
 ================================================== -->     
-    <div class="analysis-box" ng-show="analysis.sites[1][results].hiddenText.words">
+    <div class="analysis-box" ng-show="analysis.sites[1][results].linkText.words">
       <h4>Link Text</h4>
       <div class="word-pane common">
         <div class="word-box title">
