--- a/spiderweb/app/views/splashdown/context.html
+++ b/spiderweb/app/views/splashdown/context.html
@@ -19,10 +19,10 @@
           <div class="count">Count</div>
           <div class="word">Word</div>
         </div>
-        <div ng-repeat="word in context.words | limitTo:limitTo.context | filter:searchText" class="word-box">
+        <div ng-repeat="word in context.words | limitTo:limitTo.context | filter:searchText" ng-click="showInfo(site, 'context', word, 'Word', context.word, 'context')" class="word-box clickable">
           <div class="rank">{{word.rank}}</div>
           <div class="count">{{word.count}}</div>
-          <div class="word" ng-click="showInfo(site, 'context', word, 'Word', context.word, 'context')">{{word.word}}</div>
+          <div class="word">{{word.word}}</div>
         </div>
       </div>
     </div>
