--- a/spiderweb/app/views/splashdown/text.html
+++ b/spiderweb/app/views/splashdown/text.html
@@ -15,10 +15,10 @@
           <div class="count">Count</div>
           <div class="word">Word</div>
         </div>
-        <div ng-repeat="word in site[results].visibleText.words | limitTo:limitTo.text | filter:searchText" class="word-box">
+        <div ng-repeat="word in site[results].visibleText.words | limitTo:limitTo.text | filter:searchText" ng-click="showInfo(site, 'text', word, 'Word', 'Visible Text', 'visibleText')" class="word-box clickable">
           <div class="rank">{{word.rank}}</div>
           <div class="count">{{word.count}}</div>
-          <div class="word" ng-click="showInfo(site, 'text', word, 'Word', 'Visible Text', 'visibleText')">{{word.word}}</div>
+          <div class="word">{{word.word}}</div>
         </div>
       </div>
     </div>
@@ -33,10 +33,10 @@
           <div class="count">Count</div>
           <div class="word">Word</div>
         </div>
-        <div ng-repeat="word in site[results].headlineText.words | limitTo:limitTo.text | filter:searchText" class="word-box">
+        <div ng-repeat="word in site[results].headlineText.words | limitTo:limitTo.text | filter:searchText" ng-click="showInfo(site, 'text', word, 'Word', 'Headline Text', 'headlineText')" class="word-box clickable">
           <div class="rank">{{word.rank}}</div>
           <div class="count">{{word.count}}</div>
-          <div class="word" ng-click="showInfo(site, 'text', word, 'Word', 'Headline Text', 'headlineText')">{{word.word}}</div>
+          <div class="word">{{word.word}}</div>
         </div>
       </div>
     </div>
@@ -51,10 +51,10 @@
           <div class="count">Count</div>
           <div class="word">Word</div>
         </div>
-        <div ng-repeat="word in site[results].hiddenText.words | limitTo:limitTo.text | filter:searchText" class="word-box">
+        <div ng-repeat="word in site[results].hiddenText.words | limitTo:limitTo.text | filter:searchText" ng-click="showInfo(site, 'text', word, 'Word', 'Hidden Text', 'hiddenText')" class="word-box clickable">
           <div class="rank">{{word.rank}}</div>
           <div class="count">{{word.count}}</div>
-          <div class="word" ng-click="showInfo(site, 'text', word, 'Word', 'Hidden Text', 'hiddenText')">{{word.word}}</div>
+          <div class="word">{{word.word}}</div>
         </div>
       </div>
     </div>
@@ -69,10 +69,10 @@
           <div class="count">Count</div>
           <div class="word">Word</div>
         </div>
-        <div ng-repeat="word in site[results].searchWords.words | limitTo:limitTo.text | filter:searchText" class="word-box">
+        <div ng-repeat="word in site[results].searchWords.words | limitTo:limitTo.text | filter:searchText" ng-click="showInfo(site, 'text', word, 'Word', 'Search Words', 'searchWords')" class="word-box clickable">
           <div class="rank">{{$index}}</div>
           <div class="count">{{word.count}}</div>
-          <div class="word" ng-click="showInfo(site, 'text', word, 'Word', 'Search Words', 'searchWords')">{{word.word}}</div>
+          <div class="word">{{word.word}}</div>
         </div>
       </div>
     </div>
