Working, oh working on tieing things together.

--- a/spiderweb/app/views/login.html
+++ b/spiderweb/app/views/login.html
@@ -1,12 +1,7 @@
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
-<p>This is the login view.</p>
+<h1>HOME MO'FO</h1>
+<form name="input" ng-submit="logIn()">
+Username: <input type="text" name="user" ng-model="user"><br />
+Password: <input type="text" name="password" ng-model="password">
+<input type="submit" value="Submit">
+</form> 
+<h1 ng-model="returnValue">{{returnValue}}</h1>
