--- a/spiderweb/app/views/login.html
+++ b/spiderweb/app/views/login.html
@@ -1,7 +1,15 @@
-<h1>HOME MO'FO</h1>
-<form name="input" ng-submit="logIn()">
-Username: <input type="text" name="user" ng-model="user"><br />
-Password: <input type="text" name="password" ng-model="password">
-<input type="submit" value="Submit">
-</form> 
-<h1 ng-model="returnValue">{{returnValue}}</h1>
+<div class="modal-header">
+  <h1>Login</h1>
+</div>
+
+<div class="modal-body">
+  <p>Email Address: <input ng-model="result.user" /></p>
+  <p>Password: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input ng-model="result.password" /></p>
+  <p ng-show="error.show" class="error">{{error.message}}</p>
+</div>
+
+<div class="modal-footer">
+  <button ng-click="close(result, 'close')" class="btn btn-primary" >Cancel</button>
+  <button ng-click="close(result, 'login')" class="btn btn-primary" >Login</button>
+</div>
+
