constructing crawling page

--- a/spiderweb/app/views/crawling.html
+++ b/spiderweb/app/views/crawling.html
@@ -1,1 +1,28 @@
-<p>This is the crawling view.</p>
+
+<div id="crawling">
+  <div id="progress">
+    <h3 tooltip-placement="bottom" tooltip-animation="true" tooltip="Some crazy ass shit! Really this should just be some nice help text, helping the user to do things better and live their life.  But not too much text.  Quick and dirty." class="info pointer">Info</h3>
+    <h1>Crawling</h1>
+    <div class="counters">
+      <div class="estimated-time">
+        <h4>4 min 25 sec</h4>
+        <h5>Time Remaining</h5>
+      </div>
+      <div class="pages-crawled">
+        <h4>1322</h4>
+        <h5>Pages Crawled</h5>
+      </div>
+      <div class="max-pages">
+        <h4>5000</h4>
+        <h5>Max Pages</h5>
+      </div>
+    </div>
+    <div class="meter">
+	    <span style="width: 25%"></span>
+    </div>
+    <div id="quote">
+      <h3>A word to the wise ain't necessary - it's the stupid ones that need the advice.</h3>
+      <h4>Bill Cosby</h4>
+    </div>
+  </div>
+<div>
