Added picture to crawling page, later should add functionality to cycle between images.

--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -713,6 +713,13 @@
     }
   }
 }
+.crawl-image {
+  float: left;
+  height: 100px;
+  width: 100px;
+  margin-top: -100px;
+}
+
 #quote {
   @include clearfix;
 
