--- a/spiderweb/app/views/crawling.html
+++ b/spiderweb/app/views/crawling.html
@@ -3,6 +3,8 @@
   <div id="progress">
     <h3 tooltip-placement="bottom" tooltip-animation="true" tooltip="Some crazy ass shit! Really this should just be some nice help text, helping the user to do things better and live their life.  But not too much text.  Quick and dirty." class="info pointer">Info</h3>
 
+    <img src="images/ps_rocket.jpg" class="crawl-image" /> 
+
     <div ng-show="status.initializing">
       <h1>Initializing</h1>      
       <div id="floatingBarsG">
