Trying, oh trying, to get overflow to work on splashdown page, so can scroll for more than a few boxes

--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -364,10 +364,14 @@
 }
 
 .analysis-content {
+
   padding-left: 20px;
     
-  @include clearfix;
+}
 
+.additional-info {
+ 
+  @include clearfix;
 }
 
 .summary-table {
@@ -457,7 +461,6 @@
   display: inline-block;
   margin: 0px 45px;
   text-align: center;
-  float: right;
 
   .add-info-btns {
     float: right;
