--- a/spiderweb/app/views/splashdown.html
+++ b/spiderweb/app/views/splashdown.html
@@ -3,15 +3,30 @@
 <!-- Side Navigation
 ================================================== -->
   <div class="span2 padded side-nav">
-    <h3>My Analysis</h3>
-    <span ng-repeat="analysis in analysisList">
-      <h4><a href="#/splasdown/{{analysis}}">{{analysis}}</a></h4>
+    <h3>Crawl Log</h3>
+    <span ng-repeat="folder in folderList | orderBy:'name'">
+      <h4><a href="#/splasdown/{{analysis}}">{{folder.name}}</a></h4>
     </span> 
+  </div>
+
+<!-- Folder Info
+================================================== -->
+  <div class="span10 padded" ng-hide="analysisAvailable">
+    <h2>{{currentFolder.name}} folder</h2>
+    <table class="analysis-list">
+      <tr>
+        <th>Analysis Name</th><th>Analysis Date</th>
+      </tr>
+      <tr ng-repeat="analysis in currentFolder.analysisList | orderBy:'date'" ng-click="selectAnalysis(analysis.id)" class="analysis-list-item pointer">
+        <td><span class="analysis-list-name">{{analysis.name}}</span></td>
+        <td><span class="analysis-list-date">{{analysis.date}}</span></td>
+      </tr>
+    </table>
   </div>
 
 <!-- Analysis Info
 ================================================== -->
-  <div class="span10 padded">
+  <div class="span10 padded" ng-show="analysisAvailable">
     <div class="row-fluid analysis-header">
       <h2 class="inline">{{currentAnalysis.name}}</h2>
       <h4 class="inline">date: {{currentAnalysis.date}}</h4>
