Cleaned up splashdown controller

--- a/spiderweb/app/views/splashdown.html
+++ b/spiderweb/app/views/splashdown.html
@@ -36,8 +36,8 @@
 ================================================== -->
     <div class="row-fluid">
       <div class="btn-group result-btns">
-        <button class="btn active-{{internal}} no-btn-{{soloResults}}" ng-click="resultsChoice('internal')" ng-show="show.internal">Internal</button>
-        <button class="btn active-{{external}} no-btn-{{soloResults}}" ng-click="resultsChoice('external')" ng-show="show.external">External</button>
+        <button class="btn active-{{internal}} no-btn-{{soloResults}}" ng-click="resultsChoice('internal')" ng-show="show.internalButton">Internal</button>
+        <button class="btn active-{{external}} no-btn-{{soloResults}}" ng-click="resultsChoice('external')" ng-show="show.externalButton">External</button>
       </div>
       <tabs>
         <pane heading="Summary">
