--- a/spiderweb/app/views/main.html
+++ b/spiderweb/app/views/main.html
@@ -5,11 +5,11 @@
 <!-- Hanging Spiders
 ================================================== -->
 <div class="row-fluid">
-  <div class="span2 offset1 hanging-spider"  ng-click="move('spider1Margin')">
+  <div class="span2 offset1 hanging-spider" ng-click="move('spider1Margin')">
     <div class="row-fluid">
       <img src="images/PS_hangingSpider.jpg" ng-style="{ 'margin-top':spider1Margin }" />
       <div class="spider-text" ng-style="{ 'margin-top': text1Margin }">
-        <p>Sample text that I want to hide.  This will talk about how fast the spider can go.  It will then give the person the option to click on a link and find out more information.  I can have a little bit more.<a href="">learn more</a></p>
+        <p>Download and analyze thousands of pages in minutes.  An army of computers crawls the web just for you.  Don’t you feel special. <a href="#/ourwords/about#fast">learn more</a></p>
       </div>
     </div>
     <div class="row-fluid">
@@ -20,7 +20,7 @@
     <div class="row-fluid">
       <img src="images/PS_hangingSpider.jpg" ng-style="{ 'margin-top':spider2Margin }" />
       <div class="spider-text" ng-style="{ 'margin-top': text2Margin }">
-        <p>Sample text that I want to hide.  This will talk about how fast the spider can go.  It will then give the person the option to click on a link and find out more information.  I can have a little bit more.<a href="">learn more</a></p>
+        <p>Just type in a website and hit crawl.  See what you get.  For a “choose your own adventure,” hit advanced options and click on something else. <a href="#/ourwords/about#easy">learn more</a></p>
       </div>
     </div>
     <div class="row-fluid">
@@ -31,7 +31,7 @@
     <div class="row-fluid">
       <img src="images/PS_hangingSpider.jpg" ng-style="{ 'margin-top':spider3Margin }" />
       <div class="spider-text" ng-style="{ 'margin-top': text3Margin }">
-        <p>Sample text that I want to hide.  This will talk about how fast the spider can go.  It will then give the person the option to click on a link and find out more information.  I can have a little bit more.<a href="">learn more</a></p>
+        <p>No cost to sign up and use the full version.  Initial crawls fall within the Free Tier. Or experiment by using the 20 page limited version as much as you want. <a href="#/ourwords/about#free">learn more</a></p>
       </div>
     </div>
     <div class="row-fluid">
@@ -46,22 +46,22 @@
       <img src="images/PS_angledFor.png" class="pull-left" />
       <h4>Academic Research</h4>
     </div>
-    <div ng-style="{ 'margin-top': text1MarginTop, 'visibility': text1Visibility }" >
-      <p>This is some mother f'ing hidden text.  When the user clicks on the for block I am going to tell them all about some awesome stuff, really.  I hope this isn't too long.  <a href="">Learn More</a></p>
+    <div ng-style="{ 'margin-top': text1MarginTop, 'visibility': text1Visibility }" class="for-text">
+      <p>Whatever your field of study, tap into the data of the Internet.  Let Parallel Spider help you generate, analyze, and visualize that data so that you can focus on the important part: understanding it. <a href="#/ourwords/about#research">Learn More</a></p>
     </div>
     <div class="for-block" ng-click="animate('for2Margin')" ng-style="{ 'margin-left': for2MarginLeft, 'margin-top': for2MarginTop }">
       <img src="images/PS_angledFor.png" class="pull-left" />
       <h4>Business Intelligence</h4>
     </div>
-    <div ng-style="{ 'margin-top': text2MarginTop, 'visibility': text2Visibility }" >
-      <p>This is some mother f'ing hidden text.  When the user clicks on the for block I am going to tell them all about some awesome stuff, really.  I hope this isn't too long.  <a href="">Learn More</a></p>
+    <div ng-style="{ 'margin-top': text2MarginTop, 'visibility': text2Visibility }" class="for-text">
+      <p>Perform competitive analysis. Gather customer intelligence. Ascertain market insights.   What can Parallel Spider do for you? <a href="#/ourwords/about#business">Learn More</a></p>
     </div>
     <div class="for-block" ng-click="animate('for3Margin')" ng-style="{ 'margin-left': for3MarginLeft, 'margin-top': for3MarginTop }">
       <img src="images/PS_angledFor.png" class="pull-left" />
       <h4>The Curious</h4>
     </div>
-    <div ng-style="{ 'margin-top': text3MarginTop, 'visibility': text3Visibility }" >
-      <p>This is some mother f'ing hidden text.  When the user clicks on the for block I am going to tell them all about some awesome stuff, really.  I hope this isn't too long.  <a href="">Learn More</a></p>
+    <div ng-style="{ 'margin-top': text3MarginTop, 'visibility': text3Visibility }" class="for-text">
+      <p>What is that government website really focused on?  What is hidden in the details of that company’s website.  You ask the questions, Parallel Spider helps you find the answers  <a href="#/ourwords/about#curious">Learn More</a></p>
     </div>
   </div>
 </div>
