--- a/spiderweb/app/views/ourwords/about.html
+++ b/spiderweb/app/views/ourwords/about.html
@@ -1,16 +1,29 @@
-<div>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
-  <p>This is the about page, I hope.</p>
+<div class="our-words-container">
+  <div class="about">
+    <img class="top-image" src="images/ps-floater.jpg" />
+    <h1>About</h1>
+    <p>Parallel Spider is a tool for website analysis and comparison.  The system allows individuals with non-technical backgrounds to perform advanced data analysis tasks on websites:  What words are used?  How are those words used?  What sites are linked to? How do two or more sites compare? and more…</p>
+    <p>We can’t tell you exactly how to use Parallel Spider.  The answer to that question depends upon what interests you and what you want to discover.  Parallel Spider is designed to be a general tool.   A tool to help people reach insights into the worlds that matter to them on that wide web called the Internet.</p>
+  </div>
+  <h2>Plot Points</h2>
+  <div id="fast" class="autoscroll">&nbsp;</div>
+  <h3>Fast</h3>
+  <p>Instead of one computer to download and analyze the data, Parallel Spider uses 20 computers for each crawl.  Why don’t we use even more?  Do be a good citizen on the net, we only download 20 pages per second from the websites being analyzed.  This download rate still allows the system to analyze over a thousand pages per minute, and is much better than a single computer solution.  A five-thousand-page site can be completely analyzed in less than 5 minutes.</p>
+  <div id="easy" class="autoscroll">&nbsp;</div>
+  <h3>Easy</h3>
+  <p>Just select the analysis options you want and the sites you wish to crawl.  No need to use XPATH or CSS selectors unless you want.  No need to download anything.  Just a few clicks and your off on your very own crawl.  We even provide visualizations to help you understand the data and to help you convey that understanding to other.</p>
+  <div id="free" class="autoscroll">&nbsp;</div>
+  <h3>Free</h3>
+  <p>Parallel Spider has a free tier of usage.  Learn the system, see if you like it, or just use it for a few things and be done with it.  Beyond the beginning free tier, prices are cheap.  Analyze 10,000 pages for less than a dollar.  Different options cost pennies.  Only pay for what you use.</p>
+  <h2>Use Cases</h2>
+  <div id="research" class="autoscroll">&nbsp;</div>
+  <h3>Academic Research</h3>
+  <p>Anthropology, Sociology, Political Science, … whatever area of academia you come from Parallel Spider is a tool for you to both acquire and analyze data on the web.  The Internet is the largest data source in the world.  It’s really big, we’re not kidding!  Parallel Spider is your keg tap into that enormous data set, allowing you to drink in information in unique ways and find the hidden meaning that is relevant to your research.</p>
+  <div id="business" class="autoscroll">&nbsp;</div>
+  <h3>Business Intelligence</h3>
+  <p>What’s important to your competitors?  Are they emphasizing things that you aren’t?  You know social is important, but what other areas are you missing?  Are there websites relevant to your markets that you would like to examine at a more macro level.  We don’t know your markets, you do.  Parallel Spider is just a tool to help you understand the web in ways that are relevant to you, the expert.</p>
+  <div id="curious" class="autoscroll">&nbsp;</div>
+  <h3>The Curious</h3>
+  <p>What is the Federal Reserve talking about? How about your child’s favorite sites?  The web is an overabundance of data.  Google helps you find the details, the trees; Parallel Spider helps you see the big picture, the forest.  Or maybe the beach?  Whatever you prefer.  Don’t just read a few pages of a website, find out what a site is emphasizing overall and how that compares to other sites on the web.  Crawl where you want.  Let us now what you find.</p>
+  <h4>For more detailed examples, check out Spider Diaries.</h4>
 </div>
